Added colors and color averaging

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         width: min(80vw, 80vh);
       }
 
-      #control-container {
+      #control8-container {
         display: flex;
         margin-top: 1vh;
         flex-direction: row;
@@ -45,6 +45,7 @@
       <button onClick="play()">Play</button>
       <button onClick="pause()">Pause</button>
       <button onClick="step()">Step</button>
+      <button onClick="randColor()">Color</button>
 
     </div>
     <script src="src/index.js"></script>
