--- a/index.html
+++ b/index.html
@@ -1,53 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Colorful Game of Life</title>
     <meta charset="UTF-8" />
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        display: flex;
-        min-height: 100vh;
-        min-width: 100vw;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      }
-
-      canvas {
-        image-rendering: pixelated;
-        /* border: 1px solid black; */
-        height: min(80vw, 80vh);
-        width: min(80vw, 80vh);
-      }
-
-      #control8-container {
-        display: flex;
-        margin-top: 1vh;
-        flex-direction: row;
-        width: min(80vw, 80vh);
-        flex-wrap: wrap;
-
-      }
-
-      button {
-        flex: 1;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
 
   <body>
     <canvas height="500" width="500"></canvas>
     <div id="control-container">
-      <button onClick="newBoard()">New Board</button>
-      <button onClick="clean()">Clear</button>
-      <button onClick="play()">Play</button>
-      <button onClick="pause()">Pause</button>
-      <button onClick="step()">Step</button>
-      <button onClick="randColor()">Color</button>
-
+      <button class="button-controls" onClick="newBoard()">New Board</button>
+      <button class="button-controls" onClick="clean()">Clear</button>
+      <button class="button-controls" onClick="play()">Play</button>
+      <button class="button-controls" onClick="pause()">Pause</button>
+      <button class="button-controls" onClick="step()">Step</button>
+      <button class="button-controls" onClick="randColor()">Color</button>
     </div>
-    <script src="src/index.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
