--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   </head>
 
   <body>
-    <canvas height="500" width="500"></canvas>
-    <div id="control-container">
-      <button class="button-controls" onClick="newBoard()">New Board</button>
-      <button class="button-controls" onClick="clean()">Clear</button>
-      <button class="button-controls" onClick="play()">Play</button>
-      <button class="button-controls" onClick="pause()">Pause</button>
-      <button class="button-controls" onClick="step()">Step</button>
-      <button class="button-controls" onClick="randColor()">Color</button>
+    <div class="content-container">
+      <canvas height="500" width="500"></canvas>
+      <div id="control-container">
+        <button class="button-controls" onClick="newBoard()">Reset</button>
+        <button class="button-controls" onClick="clean()">Clear</button>
+        <button class="button-controls" onClick="play()">Play</button>
+        <button class="button-controls" onClick="pause()">Pause</button>
+        <button class="button-controls" onClick="step()">Step</button>
+      </div>
     </div>
     <script src="scripts/index.js"></script>
   </body>
