--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="content-container">
-      <canvas height="500" width="500"></canvas>
+      <canvas height="100" width="100"></canvas>
       <div id="button-container">
         <button class="button-controls" onClick="newBoard()">Reset</button>
         <button class="button-controls" onClick="clean()">Clear</button>
@@ -22,23 +22,25 @@
           <input
             type="range"
             min="1"
-            max="100"
-            value="50"
+            max="20"
+            value="10"
             class="slider"
             id="size"
             name="size"
+            onchange="changeSize(this.value)"
           />
         </div>
         <div>
           <label for="speed">speed</label>
           <input
             type="range"
-            min="1"
-            max="100"
-            value="50"
+            min="0"
+            max="10"
+            value="5"
             class="slider"
             id="speed"
             nam="speed"
+            onchange="changeSpeed(this.value)"
           />
         </div>
       </div>
