--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
             onchange="changeSpeed(this.value)"
           />
         </div>
+        <div>
+          <label for="density">density</label>
+          <input
+            type="range"
+            min="1"
+            max="10"
+            value="5"
+            class="slider"
+            id="density"
+            nam="density"
+            onchange="changeDensity(this.value)"
+          />
+        </div>
       </div>
     </div>
     <script src="scripts/index.js"></script>
